ligo Conda environment

--- a/hw02-description.ipynb
+++ b/hw02-description.ipynb
@@ -3,7 +3,9 @@
   {
    "cell_type": "markdown",
    "id": "fbfcf616-e096-42f0-99b3-6d0a933ce55b",
-   "metadata": {},
+   "metadata": {
+    "user_expressions": []
+   },
    "source": [
     "# Homework No 2 - _From Notebooks to Research Packages_\n",
     "\n",
@@ -24,7 +26,8 @@
    "cell_type": "markdown",
    "id": "7026949e-a3aa-47ce-bcea-f8c29b3f0d97",
    "metadata": {
-    "tags": []
+    "tags": [],
+    "user_expressions": []
    },
    "source": [
     "## Deliverables\n",
@@ -53,7 +56,9 @@
   {
    "cell_type": "markdown",
    "id": "f5a541d2-baf9-4eaa-a2ef-2dc869f3ea9f",
-   "metadata": {},
+   "metadata": {
+    "user_expressions": []
+   },
    "source": [
     "### [5 points] Python `ligotools` package\n",
     "\n",
@@ -77,7 +82,9 @@
   {
    "cell_type": "markdown",
    "id": "d16cd79b-10e1-4384-83fc-c217bbe449af",
-   "metadata": {},
+   "metadata": {
+    "user_expressions": []
+   },
    "source": [
     "### [10 Points] A working `ligo` Conda environment\n",
     "\n",
@@ -101,7 +108,9 @@
   {
    "cell_type": "markdown",
    "id": "3cc4d831-d97a-4883-82ad-09bfb8e2ea6a",
-   "metadata": {},
+   "metadata": {
+    "user_expressions": []
+   },
    "source": [
     "### [10 points] Add Binder support\n",
     "\n",
@@ -120,7 +129,10 @@
   {
    "cell_type": "markdown",
    "id": "91df7541-9e77-46ab-a0bf-d7b9ad37ee82",
-   "metadata": {},
+   "metadata": {
+    "tags": [],
+    "user_expressions": []
+   },
    "source": [
     "### [5 points] GitHub repository\n",
     "\n",
